Основные исправления в script.js:
    Добавлены функции canSpendExperience() и spendExperience() - для правильной проверки и списания опыта

    Исправлена логика прокачки характеристик - теперь правильно проверяет склонности, стоимость и наличие опыта

    Добавлены alert-сообщения при недостатке опыта для улучшений

    Унифицирована логика между прокачкой характеристик и навыков

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                         <div class="stat-input-container">
                             <input type="number" id="stat-agility" min="1" max="100" value="30">
                             <div class="improvement-dots">
-                                <div class="improvement-dot" data-value="I" data-stat="agility"></div>
-                                <div class="improvement-dot" data-value="II" data-stat="agility"></div>
-                                <div class="improvement-dot" data-value="III" data-stat="agility"></div>
-                                <div class="improvement-dot" data-value="IV" data-stat="agility"></div>
-                                <div class="improvement-dot" data-value="V" data-stat="agility"></div>
+                                <div class="improvement-dot" data-value="1" data-stat="agility"></div>
+                                <div class="improvement-dot" data-value="2" data-stat="agility"></div>
+                                <div class="improvement-dot" data-value="3" data-stat="agility"></div>
+                                <div class="improvement-dot" data-value="4" data-stat="agility"></div>
+                                <div class="improvement-dot" data-value="5" data-stat="agility"></div>
                             </div>
                         </div>
                     </div>
@@ -81,11 +81,11 @@
                         <div class="stat-input-container">
                             <input type="number" id="stat-strength" min="1" max="100" value="30">
                             <div class="improvement-dots">
-                                <div class="improvement-dot" data-value="I" data-stat="strength"></div>
-                                <div class="improvement-dot" data-value="II" data-stat="strength"></div>
-                                <div class="improvement-dot" data-value="III" data-stat="strength"></div>
-                                <div class="improvement-dot" data-value="IV" data-stat="strength"></div>
-                                <div class="improvement-dot" data-value="V" data-stat="strength"></div>
+                                <div class="improvement-dot" data-value="1" data-stat="strength"></div>
+                                <div class="improvement-dot" data-value="2" data-stat="strength"></div>
+                                <div class="improvement-dot" data-value="3" data-stat="strength"></div>
+                                <div class="improvement-dot" data-value="4" data-stat="strength"></div>
+                                <div class="improvement-dot" data-value="5" data-stat="strength"></div>
                             </div>
                         </div>
                     </div>
@@ -94,11 +94,11 @@
                         <div class="stat-input-container">
                             <input type="number" id="stat-perception" min="1" max="100" value="30">
                             <div class="improvement-dots">
-                                <div class="improvement-dot" data-value="I" data-stat="perception"></div>
-                                <div class="improvement-dot" data-value="II" data-stat="perception"></div>
-                                <div class="improvement-dot" data-value="III" data-stat="perception"></div>
-                                <div class="improvement-dot" data-value="IV" data-stat="perception"></div>
-                                <div class="improvement-dot" data-value="V" data-stat="perception"></div>
+                                <div class="improvement-dot" data-value="1" data-stat="perception"></div>
+                                <div class="improvement-dot" data-value="2" data-stat="perception"></div>
+                                <div class="improvement-dot" data-value="3" data-stat="perception"></div>
+                                <div class="improvement-dot" data-value="4" data-stat="perception"></div>
+                                <div class="improvement-dot" data-value="5" data-stat="perception"></div>
                             </div>
                         </div>
                     </div>
@@ -107,11 +107,11 @@
                         <div class="stat-input-container">
                             <input type="number" id="stat-fellowship" min="1" max="100" value="30">
                             <div class="improvement-dots">
-                                <div class="improvement-dot" data-value="I" data-stat="fellowship"></div>
-                                <div class="improvement-dot" data-value="II" data-stat="fellowship"></div>
-                                <div class="improvement-dot" data-value="III" data-stat="fellowship"></div>
-                                <div class="improvement-dot" data-value="IV" data-stat="fellowship"></div>
-                                <div class="improvement-dot" data-value="V" data-stat="fellowship"></div>
+                                <div class="improvement-dot" data-value="1" data-stat="fellowship"></div>
+                                <div class="improvement-dot" data-value="2" data-stat="fellowship"></div>
+                                <div class="improvement-dot" data-value="3" data-stat="fellowship"></div>
+                                <div class="improvement-dot" data-value="4" data-stat="fellowship"></div>
+                                <div class="improvement-dot" data-value="5" data-stat="fellowship"></div>
                             </div>
                         </div>
                     </div>
@@ -120,11 +120,11 @@
                         <div class="stat-input-container">
                             <input type="number" id="stat-intelligence" min="1" max="100" value="30">
                             <div class="improvement-dots">
-                                <div class="improvement-dot" data-value="I" data-stat="intelligence"></div>
-                                <div class="improvement-dot" data-value="II" data-stat="intelligence"></div>
-                                <div class="improvement-dot" data-value="III" data-stat="intelligence"></div>
-                                <div class="improvement-dot" data-value="IV" data-stat="intelligence"></div>
-                                <div class="improvement-dot" data-value="V" data-stat="intelligence"></div>
+                                <div class="improvement-dot" data-value="1" data-stat="intelligence"></div>
+                                <div class="improvement-dot" data-value="2" data-stat="intelligence"></div>
+                                <div class="improvement-dot" data-value="3" data-stat="intelligence"></div>
+                                <div class="improvement-dot" data-value="4" data-stat="intelligence"></div>
+                                <div class="improvement-dot" data-value="5" data-stat="intelligence"></div>
                             </div>
                         </div>
                     </div>
@@ -133,11 +133,11 @@
                         <div class="stat-input-container">
                             <input type="number" id="stat-willpower" min="1" max="100" value="30">
                             <div class="improvement-dots">
-                                <div class="improvement-dot" data-value="I" data-stat="willpower"></div>
-                                <div class="improvement-dot" data-value="II" data-stat="willpower"></div>
-                                <div class="improvement-dot" data-value="III" data-stat="willpower"></div>
-                                <div class="improvement-dot" data-value="IV" data-stat="willpower"></div>
-                                <div class="improvement-dot" data-value="V" data-stat="willpower"></div>
+                                <div class="improvement-dot" data-value="1" data-stat="willpower"></div>
+                                <div class="improvement-dot" data-value="2" data-stat="willpower"></div>
+                                <div class="improvement-dot" data-value="3" data-stat="willpower"></div>
+                                <div class="improvement-dot" data-value="4" data-stat="willpower"></div>
+                                <div class="improvement-dot" data-value="5" data-stat="willpower"></div>
                             </div>
                         </div>
                     </div>
@@ -175,7 +175,6 @@
             </div>
 
             <section class="skills-section">
-                <!-- Остальная часть секции навыков остается без изменений -->
                 <h3>Навыки</h3>
                 <div class="skills-container">
                     <!-- Ловкость -->
