Добавил три новые характеристики в секцию характеристик:
    Навык рукопашной (НР) - stat-melee

    Навык стрельбы (НС) - stat-ranged

    Выносливость (Вын) - stat-endurance

Все новые характеристики имеют такую же структуру с полем ввода и кружочками улучшения, как и остальные характеристики.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,46 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Новые характеристики -->
+                    <div class="stat-item">
+                        <label for="stat-melee">Навык рукопашной (НР)</label>
+                        <div class="stat-input-container">
+                            <input type="number" id="stat-melee" min="1" max="100" value="30">
+                            <div class="improvement-dots">
+                                <div class="improvement-dot" data-value="1" data-stat="melee"></div>
+                                <div class="improvement-dot" data-value="2" data-stat="melee"></div>
+                                <div class="improvement-dot" data-value="3" data-stat="melee"></div>
+                                <div class="improvement-dot" data-value="4" data-stat="melee"></div>
+                                <div class="improvement-dot" data-value="5" data-stat="melee"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="stat-item">
+                        <label for="stat-ranged">Навык стрельбы (НС)</label>
+                        <div class="stat-input-container">
+                            <input type="number" id="stat-ranged" min="1" max="100" value="30">
+                            <div class="improvement-dots">
+                                <div class="improvement-dot" data-value="1" data-stat="ranged"></div>
+                                <div class="improvement-dot" data-value="2" data-stat="ranged"></div>
+                                <div class="improvement-dot" data-value="3" data-stat="ranged"></div>
+                                <div class="improvement-dot" data-value="4" data-stat="ranged"></div>
+                                <div class="improvement-dot" data-value="5" data-stat="ranged"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="stat-item">
+                        <label for="stat-endurance">Выносливость (Вын)</label>
+                        <div class="stat-input-container">
+                            <input type="number" id="stat-endurance" min="1" max="100" value="30">
+                            <div class="improvement-dots">
+                                <div class="improvement-dot" data-value="1" data-stat="endurance"></div>
+                                <div class="improvement-dot" data-value="2" data-stat="endurance"></div>
+                                <div class="improvement-dot" data-value="3" data-stat="endurance"></div>
+                                <div class="improvement-dot" data-value="4" data-stat="endurance"></div>
+                                <div class="improvement-dot" data-value="5" data-stat="endurance"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Центральная часть с заголовком, аватаркой и кнопками -->
