Изменение расчета Ран

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                 <h4>Раны</h4>
                                 <div class="vitals-item">
                                     <label for="wounds-total">Всего</label>
-                                    <input type="number" id="wounds-total" readonly>
+                                    <input type="number" id="wounds-total" value = " 10 ">
                                 </div>
                                 <div class="vitals-item">
                                     <label for="wounds-current">Сейчас</label>
